abstract class Combination {

    protected static final char[] VALID_COLORS = {'R', 'G', 'B', 'Y', 'P', 'K', 'W'};

    protected static final int SIZE = 4; 

    protected char[] colors;

    public abstract void show();
    
}
